# blastoff

./: Cargo.toml  README.md  index.html  justfile
assets/: interior.xp
assets/data/: galaxy_probability.yaml  monsters.yaml  planet_probability.yaml
assets/markov/: planet.txt
assets/tileset/: tileset_transparent.tsx
resources/data/actor/: monsters.yaml
src/: animation.rs  color.rs  input.rs  main.rs  player.rs
src/camera/: camera.rs  debug.rs  glyph.rs  mod.rs  screen.rs
src/component/: animation.rs  behavior.rs  cardinal.rs  mod.rs  position.rs  renderable.rs  viewshed.rs
src/component/actor/: mod.rs
src/component/renderable/: animation.rs  mod.rs
src/data/: bitmap_font.rs  element.rs  enum_probability.rs  galaxy.rs  image.rs  markov_seed.rs  mod.rs  planet.rs  probability_types.rs  sector.rs  spawn.rs  tileset.rs
src/galaxy/: mod.rs
src/game/: actor.rs  consts.rs  env.rs  game.rs  game_loop.rs  gui.rs  mod.rs  run_state.rs  turns.rs
src/map/: loader.rs  map.rs  mod.rs  spawner.rs  tile.rs
src/map/generator/: mod.rs  simple.rs
src/map/generator/bsp/: mod.rs
src/map/generator/combo/: mod.rs
src/map/generator/wfcgen/: mod.rs  seed.rs
src/map/tile/: floor.rs  mod.rs  wall.rs
src/overworld/: mod.rs  sector_info.rs  tile.rs
src/procgen/: loader.rs  mod.rs  spawner.rs
src/procgen/galaxy/: mod.rs
src/procgen/mapgen/: mod.rs
src/procgen/mapgen/wfcgen/: forbid.rs  seed.rs
src/procgen/overworld/: mod.rs  name.rs
src/procgen/sector/: mod.rs
src/procgen/sector/bsp/: mod.rs
src/procgen/sector/combo/: mod.rs
src/procgen/sector/wfcgen/: mod.rs
src/resource/: assets.rs  mod.rs  screen.rs  viewport.rs
src/scene/: controller.rs  cutscene_new_planet.rs  debug_menu.rs  galaxy.rs  galaxy_travel.rs  game.rs  game_over.rs  initialization.rs  loader.rs  main_menu.rs  main_state.rs  map_generation.rs  menu.rs  mod.rs  overworld_map.rs  pause_menu.rs  planet.rs  sector.rs
src/sector/: mod.rs
src/sector/tile/: floor.rs  mod.rs  wall.rs
src/solar/: mod.rs
src/system/: action_decider.rs  ai.rs  animation.rs  behavior.rs  map_indexing.rs  mod.rs  scheduler.rs  viewport.rs  visibility.rs
src/util/: bitmap_font.rs  cp437.rs  dither.rs  easing.rs  geometry.rs  mod.rs  path.rs  rgb.rs  scene_stack.rs  sprite.rs  sprite_atlas.rs  sprite_sheet.rs  tile_atlas.rs  vector2d.rs
