[package]
name = "roguemon"
version = "0.1.0"
authors = ["Jeff Lynn <jmlynn@protonmail.com>"]
edition = "2021"

[dependencies]
rgb = "0.8"
pathfinding = "3.0"
bracket-lib = { git = "https://github.com/patchfx/bracket-lib", branch = "fix-tile-leaks-on-cls", features = [
    "serde",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
hecs = { version = "0.9", features = ["serde"] }
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
lazy_static = "1.4"
fixedbitset = { version = "0.4", features = ["serde"] }
euclid = { version = "0.21", features = ["serde"] }
clap = { version = "3.2.21", features = ["derive"] }
