[package]
name = "roguemon"
version = "0.1.0"
authors = ["Jeff Lynn <jmlynn@protonmail.com>"]
edition = "2021"

[dependencies]
rgb = { version = "0.8", features = ["serde"] }
symmetric-shadowcasting = "0.2"
pathfinding = "3.0"
bracket-random = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
hecs = { version = "0.9", features = ["serde"] }
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
lazy_static = "1.4"
fixedbitset = { version = "0.4", features = ["serde"] }
euclid = { version = "*", features = ["serde"] }
clap = { version = "3.2.21", features = ["derive"] }
line_drawing = "1.0.0"
png = "0.17"
morton-encoding = "2.0"
image = "0.24"
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
wfc = "0.10"
grid_2d = "0.15"
coord_2d = "0.3"
anyhow = "1.0"
