[package]
name = "blastoff"
version = "0.1.0"
authors = ["Jeff Lynn <jmlynn@protonmail.com>"]
edition = "2021"

[dependencies]
rgb = { version = "0.8", features = ["serde"] }
symmetric-shadowcasting = "0.2"
pathfinding = "4.15"
bracket-random = { version = "0.8", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hecs = { version = "0.9", features = ["serde"] }
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
lazy_static = "1.4"
fixedbitset = { version = "0.5", features = ["serde"] }
euclid = { version = "0.22", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
line_drawing = "1.0"
png = "0.18"
morton-encoding = "2.0"
image = "0.25"
wfc = "0.10"
grid_2d = "0.15"
coord_2d = "0.3"
anyhow = "1.0"
keyframe = "1.0"
keyframe_derive = "1.0"
rmp-serde = "1.1"
assets_manager = { version = "0.13", features = ["yaml", "json"] }
assets_manager_macros = "0.3"
rand_distr = "0.4"
macroquad = "0.4"
tiled = "0.15"
